@@ -9,6 +9,7 @@ boxAgeWeight(
   type,
   jaartallen = NULL,
   regio = "",
+  sourceIndicator = c("both", "inbo"),
   width = NULL,
   height = NULL
 )
@@ -24,6 +25,10 @@ in the plot; if NULL no selection on year(s) is made}
 
 \item{regio}{character vector, names of the selected regions in \code{data}
 to be shown in the plot title}
+
+\item{sourceIndicator}{character, source used to filter \code{data} ('leeftijd_comp_bron' column)
+should be one of \code{c("inbo", "both")}, where \code{"both"} refers to both inbo and meldingsformulier, 
+i.e. no filtering. Defaults to \code{"both"}}
 
 \item{width}{plot width (optional)}
 
