@@ -1,3 +1,4 @@
+	o include bron-filter for boxAgeWeight plot + input-dependent age categories
 	o percentage yearly shot animals grofwild: 
 		include open-ended ribbons
 	o fix tabs at top of page, include logo  	
